# Utility-CoffeeBrew

./: .gitignore  .pre-commit-config.yaml  .releaserc  README.md  main.py  pyproject.toml
.github/workflows/: create_release_blog.yaml  linter.yaml  release.yaml  secret-check.yaml
src/: bean2obsidian.py
src/bean_conqueror/: __init__.py  base.py  bean.py  brew.py  mill.py  parser.py  prepartion.py
