[project]
name = "017-project-beanbrewutilities"
version = "0.1.0"
description = ""
authors = [
    {name = "stone",email = "github@stone-bo.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"
ures = "^1.4.1"
pillow = "^11.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
